--- a/main.html
+++ b/main.html
@@ -11,6 +11,19 @@
     <script type="text/javascript" src="./script.js">
 </script>
 
+	 <div class="main">
+      <img
+        src="https://images.unsplash.com/photo-1682685797366-715d29e33f9d?ixlib=rb-4.0.3&ixid=M3wxMjA3fDF8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D&auto=format&fit=crop&w=2070&q=80"
+        alt=""
+      />
+      <h1>Pricing Card</h1>
+      <p>Price: Rs.200</p>
+      <p>Description: Lorem ipsum dolor sit amet consectetur adipisicing elit.</p>
+      <div>
+      <button class="btn">Buy Now</button>
+    </div>
+  </div>
+
 </body>
 
 </html>
